<resources>
    <string name="app_name">BitmapFromXmlLayout</string>
    <string name="permissions_denial">Para utilizar este aplicativo, você precisa aceitar as permissões.</string>
    <string name="ellipsis">&#8230;</string>
    <string name="regular_font_path">fonts/Roboto-Regular.ttf</string>
    <string name="bold_font_path">fonts/Roboto-Bold.ttf</string>
    <string name="medium_font_path">fonts/Roboto-Medium.ttf</string>
    <string name="latin">"Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo."</string>
    <string name="navigation_drawer__headlines">Manchetes</string>
    <string name="navigation_drawer__tendencies">Tendências</string>
    <string name="navigation_drawer__interests">Interesses</string>
    <string name="navigation_drawer__notifications">Notificações</string>
    <string name="navigation_drawer__settings">Configurações</string>
    <string name="navigation_drawer__logout">Sair</string>
    <string name="dialog__progress_dialog">Carregando</string>
    <string name="dialog__please_wait">Espere por favor&#8230;</string>
    <string name="dialog_yes">Sim</string>
    <string name="dialog_no">Não</string>
    <string name="dialog_ok">Ok</string>
    <string name="dialog__lost_connection_title">Conexão perdida</string>
    <string name="dialog__lost_connection_message">Conexão com Internet perdida. Tente novamente mais tarde.</string>
    <string name="youtube_api_key">AIzaSyCpchnfOTZ_ngjb7uejgWQCyL15g1iHZ7s</string>
    <string name="google_places_webservice_api_key">AIzaSyAq0pvPDbbxlfIfJ1G9P0lsfYViy0jflIU</string>
    <string name="gcm_server_api_key">AIzaSyAaRXPk5tqShlJ9Ve6kpMFH7oHzSuO3P-A</string>
    <string name="gcm_sender_id">900170392962</string>
    <string name="walkthrough_activity__logo">Logo</string>
    <string name="walkthrough_activity__enter">Entrar</string>
    <string name="walkthrough_activity__enroll">Cadastrar</string>
    <string name="walkthrough_activity__first_title">Bem vindo ao FaceMagazine</string>
    <string name="walkthrough_activity__first_message">Sua rede social em formato de revista.\n </string>
    <string name="walkthrough_activity__second_title">Mantenha-se atualizado</string>
    <string name="walkthrough_activity__second_message">Filtre apenas o que é relevante para você\nem sua timeline.</string>
    <string name="walkthrough_activity__third_title">Você em uma capa de revista</string>
    <string name="walkthrough_activity__third_message">Publique as novidades do seu dia a dia\ne seja destaque no mundo todo.</string>
    <string name="login_activity__user_name">Nome do usuário</string>
    <string name="login_activity__password">Senha</string>
    <string name="login_activity__enter">Entrar</string>
    <string name="login_activity__forgot_password"><u>Esqueceu sua senha?</u></string>
    <string name="login_activity__invalid_email_password">E-mail ou senha inválidos.</string>
    <string name="login_activity__login_success">Usuário %1$s logado com sucesso!</string>
    <string name="login_activity__login_error">Erro ao realizar login na conta %1$s.</string>
    <string name="enroll_activity__name_surname">Nome e Sobrenome</string>
    <string name="enroll_activity__user_name">Nome de Usuário</string>
    <string name="enroll_activity__email">Email</string>
    <string name="enroll_activity__password">Senha</string>
    <string name="enroll_activity__repeat_email">Repetir Email</string>
    <string name="enroll_activity__main_color">Cor preferida</string>
    <string name="enroll_activity__bottom_text">Ao clicar em cadastrar você estará aceitando\nos <u>Termos de Uso</u> e <u>Privacidade</u>.</string>
    <string name="enroll_activity__gallery_image_not_taken">Você não escolheu uma imagem.</string>
    <string name="enroll_activity__dialog_select_color">Selecione uma cor para o seu perfil</string>
    <string name="enroll_activity__alfanumeric">Digite ao menos um caractere alfanumérico.</string>
    <string name="enroll_activity__email_unavailable">E-mail já cadastrado no sistema.</string>
    <string name="enroll_activity__not_same_email">Por favor, digite e-mails iguais.</string>
    <string name="enroll_activity__wrong_format">Digite um e-mail no formato correto.</string>
    <string name="enroll_activity__username_availability_error">Erro ao checar disponibilidade do usuário %1$s.</string>
    <string name="enroll_activity__username_unavailable">Usuário %1$s já cadastrado no sistema.</string>
    <string name="enroll_activity__username_empty">Nome do usuário não pode ser nulo.</string>
    <string name="enroll_activity__username_with_dot">Nome do usuário não pode conter \".\"</string>
    <string name="enroll_activity__username_correct_length">Nome do usuário deve possuir entre 4 e 50 caracteres.</string>
    <string name="enroll_activity__password_empty">Senha não pode ser nula.</string>
    <string name="enroll_activity__password_correct_length">Senha do usuário deve possuir entre 4 e 50 caracteres.</string>
    <string name="enroll_activity__empty_fields">Favor preencher todos os campos.</string>
    <string name="enroll_activity__create_user_error">Erro ao criar conta %1$s.</string>
    <string name="enroll_activity__create_user_success">Conta do usuário %1$s criada com sucesso!</string>
    <string name="category_activity__title_text">Pelo que você tem interesse?</string>
    <string name="category_activity__next">Próximo</string>
    <string name="interests_fragment__retrofit_error">Erro obtendo Interesses do servidor.</string>
    <string name="interests_fragment__success">Interesses baixados do servidor com sucesso!</string>
    <string name="interests_adapter__add">Adicionar</string>
    <string name="settings_fragment__user_name">Luke Winchester</string>
    <string name="settings_fragment__email">luke.winchester@zukmail.com</string>
    <string name="settings_fragment__account_data">Dados da conta</string>
    <string name="settings_fragment__change_user_name">Alterar nome do usuário</string>
    <string name="settings_fragment__change_password">Alterar senha</string>
    <string name="settings_fragment__private_account">Conta privada</string>
    <string name="settings_fragment__push_notifications">Notificações Push</string>
    <string name="settings_fragment__support">Suporte</string>
    <string name="settings_fragment__feedback">Feedback</string>
    <string name="settings_fragment__usage_terms_privacy">Termos de Uso e Privacidade</string>
    <string name="settings_fragment__private_account_dialog">Apenas usuários que você\npermitiu que te seguissem,\npoderão ver suas postagens.</string>
    <string name="settings_fragment__who_can_tag_me">Quem pode me marcar</string>
    <string name="settings_fragment__automatic_markups">Aprovar marcações automaticamente</string>
    <string name="settings_fragment__who_can_tag_me_first_option">Apenas quem eu sigo</string>
    <string name="settings_fragment__who_can_tag_me_second_option">Todos</string>
    <string name="settings_fragment__who_can_tag_me_third_option">Ninguém</string>
    <string name="headlines_fragment__empty_list">Não existem postagens para esse interesse.</string>
    <string name="headlines_fragment__liked">Gostei</string>
    <string name="headlines_fragment__commented">Comentar</string>
    <string name="headlines_fragment__menu_search">Pesquisar</string>
    <string name="headlines_fragment__menu_filter">Filtrar</string>
    <string name="headlines_fragment__menu_delete">Deletar</string>
    <string name="headlines_fragment__plus_dialog_text">Texto</string>
    <string name="headlines_fragment__plus_dialog_pictures">Fotos</string>
    <string name="headlines_fragment__plus_dialog_video">Vídeo</string>
    <string name="headlines_fragment__plus_dialog_audio">Áudio</string>
    <string name="headlines_fragment__plus_dialog_youtube">YouTube</string>
    <string name="headlines_fragment__plus_dialog_link">Link</string>
    <string name="headlines_fragment__logout">Você realmente deseja se\ndeslogar do FaceMagazine?</string>
    <string name="headlines_fragment_dialog_photos__take_picture">Tirar foto</string>
    <string name="headlines_fragment_dialog_photos__choose_from_library">Escolher da biblioteca</string>
    <string name="headlines_fragment_dialog_photos__getting_pictures_from_gallery">Obtendo fotos da Gallery&#8230;</string>
    <string name="headlines_fragment_dialog_photos__taking_a_picture">Tirando uma foto&#8230;</string>
    <string name="headlines_fragment_dialog_photos__media_store_title">Nova foto</string>
    <string name="headlines_fragment_dialog_photos__media_store_description">Nova foto da sua câmera</string>
    <string name="headlines_adapter__audio_stopped">Áudio finalizado. Clique mais uma vez para executá-lo novamente.</string>
    <string name="headlines_adapter__video_stopped">Vídeo finalizado. Clique mais uma vez para executá-lo novamente.</string>
    <string name="filter_activity__visualize">Visualizar:</string>
    <string name="filter_activity__follow_posts">Apenas postagens de quem eu sigo.</string>
    <string name="filter_activity__public_posts">Todas as postagens públicas.</string>
    <string name="filter_activity__place">Local:</string>
    <string name="filter_activity__world">Mundo</string>
    <string name="user_profile_activity__following">Seguindo</string>
    <string name="user_profile_activity__follow">Seguir</string>
    <string name="user_profile_activity__following_profile">seguindo</string>
    <string name="user_profile_activity__followers">seguidores</string>
    <string name="user_profile_activity__info">Informações</string>
    <string name="user_profile_activity__share_profile">Compartilhar perfil</string>
    <string name="user_profile_activity__report_user">Denunciar usuário</string>
    <string name="user_profile_activity__private_profile">Perfil privado</string>
    <string name="user_profile_activity__empty_list">Este usuário não possui postagens.</string>
    <string name="user_profile_activity__edit_profile">Editar Perfil</string>
    <string name="informations_activity__places">Locais:</string>
    <string name="informations_activity__current_city">Cidade Atual</string>
    <string name="informations_activity__current_city_details">Miami / FL - EUA</string>
    <string name="informations_activity__born_city">Cidade Natal</string>
    <string name="informations_activity__born_city_details">Orlando / FL - EUA</string>
    <string name="informations_activity__informations">Informações:</string>
    <string name="informations_activity__age">Idade</string>
    <string name="informations_activity__age_details">22 anos</string>
    <string name="informations_activity__job">Profissão</string>
    <string name="informations_activity__job_details">Modelo</string>
    <string name="informations_activity__relationship">Relacionamento</string>
    <string name="informations_activity__relationship_details">Solteira</string>
    <string name="informations_activity__unknown_field">Não especificada</string>
    <string name="report_activity__report_profile_message">Descreva por qual motivo você está denunciando este usuário&#8230;</string>
    <string name="post_text_activity__title_text">Título:</string>
    <string name="post_text_activity__post_title">Escreva um título para sua postagem</string>
    <string name="post_text_activity__select_category">Selecione a categoria</string>
    <string name="post_text_activity__place_details_hint">Localização não especificada</string>
    <string name="post_text_activity__post_text">Escreva um texto sobre sua postagem</string>
    <string name="post_video_activity__category">Categoria:</string>
    <string name="post_video_activity__place">Local:</string>
    <string name="post_video_activity__description">Descrição:</string>
</resources>